Fix pa11y contrast error

--- a/web-client/src/styles/custom.scss
+++ b/web-client/src/styles/custom.scss
@@ -849,6 +849,7 @@ nav.usa-nav {
   top: -3px;
   border: none;
   margin-left: 5px;
+  background-color: #162e51; // TODO: Replace with USWDSv2 var when available;
   color: #fff;
   font-size: 14px;
 }
